--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.datasource.hikari.maxLifetime=1765000
+spring.datasource.hikari.maximumPoolSize=1
 
+mybatis-plus.type-aliases-package=com.standbyside.datadict.entity
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.global-config.banner=false
+
+custom.schema-name=test
