[feat] generate pdf with tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql://localhost:3306/visitor?characterEncoding=utf8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.hikari.maxLifetime=1765000
@@ -10,4 +10,4 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
 mybatis-plus.global-config.banner=false
 
-custom.schema-name=test
+custom.schema-name=visitor
