[refactor] enable change folder path in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ mybatis-plus.mapper-locations=classpath:mapper/*.xml
 mybatis-plus.global-config.banner=false
 
 custom.schema-name=visitor
+custom.save-folder=D://test//
